Fix scrollbar theming

--- a/src/WordList.css
+++ b/src/WordList.css
@@ -50,7 +50,7 @@
   width: 7px;
 }
 
-::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb:vertical {
   border-radius: 5px;
   background-color: rgba(0, 0, 0, 0.5);
   -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
@@ -110,6 +110,7 @@
 
 .word-list .detail {
   text-align: center;
+  overflow-y: scroll;
 }
 
 .word-list .caption {
